# public-metadata-aware-nwp-in-sla

./: .gitignore  main.tex  resesarch-summary.md
bibs/: gated-attention.bib  language-models.bib  learner-corpora.bib  metadata-infusion.bib  sla-modeling.bib
codebase/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
codebase/.github/workflows/: ci.yaml
codebase/configs/: b0_native.yaml  b1_learner.yaml  b2_metadata_concat.yaml  eval_transfer.yaml  g1_gated.yaml  paths.yaml
codebase/scripts/: 00_download_models.py  01_prepare_efcamdat.py  02_prepare_external.py  03_prepare_b0_checkpoint.py  10_train_b1_learner.py  11_train_b2_metadata_concat.py  12_train_g1_gated.py  20_eval_ppl.py  21_eval_cloze.py  30_aggregate_results.py  _eval_common.py  _train_shared.py  smoke_b0.py
codebase/src/gated_nwp/: __init__.py  config.py
codebase/src/gated_nwp/evaluation/: __init__.py  cloze.py  perplexity.py
codebase/src/gated_nwp/models/: __init__.py  gated_attention.py  gpt2_with_gate.py
codebase/src/gated_nwp/training/: __init__.py  trainer.py
codebase/src/gated_nwp/utils/: __init__.py  forward.py  io.py  seeding.py
codebase/tests/: conftest.py  test_config.py  test_data_loading.py  test_forward_shim.py  test_gated_attention.py  test_metadata.py  test_seeding_and_io.py
config/: commands.tex  packages.tex
deploy/: README.md  authors.tex.example  paths.yaml.example
eval_scripts/: README.md  _io.py  emit.py  eval_cloze_table.py  eval_stratified_ppl_table.py  eval_transfer_table.py  predict_online_ppl.py  run_all_tables.py  schema.py
experiments-ideas/: models-to-experiment.md  v01-flagship-sdpa-cefr-l1.md  v02-site-value-gate.md  v03-granularity-headwise.md  v04-mode-additive-silu.md  v05-metadata-cefr-only.md  v06-metadata-l1-only.md  v07-metadata-typology.md  v08-task-cloze.md  v09-frozen-backbone.md  v10-efcamdat-plus-c4200m.md
metadata/: abstract.tex  authors.tex  title.tex
runs/: README.md
runs/B0-celva-smoke/: celva-2sample-renamed.csv  predictions.jsonl
runs/B0-celva-smoke/tables/: cloze.csv  stratified_ppl.csv  transfer.csv
sections/: 01-introduction.tex  02-related-work.tex  03-method.tex  04-experiments.tex  05-results.tex  06-discussion.tex  07-limitations.tex  08-ethics.tex  09-acknowledgments.tex
tests/test_eval_scripts/: conftest.py  test_eval_tables.py  test_predict_online_ppl.py  test_schema.py
